# lore

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHECKPOINT_2025-05-15.md  CONTRIBUTING.md  FINDINGS.md  LICENSE  README.md  STATUS.md  TESTING_ROADMAP.md  TODO.md  install.ps1  install.sh  lore.html  lore.ps1  package-lock.json  package.json  pyproject.toml  sync-remote.sh  vite.config.js
.github/workflows/: build.yml  ci.yml
scripts/: tauri-wrapper.mjs
src/: app.js  index.html  styles.css  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  client.rs  lib.rs  main.rs
src/lore/: __init__.py  cli.py  output.py  support_client.py  tui.py  webui.html  webui.py  webview.py
tests/: conftest.py  test_output.py  test_support_client.py  test_tui.py  test_webui.py  test_webview.py
