[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenovo-lore"
version = "1.0.0-dev"
description = "Lenovo Online Research & Equipment — query Lenovo Support APIs for device info, drivers, and warranty status"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
lore = "lore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
