[package]
name = "lore"
version = "1.0.0"
description = "LORE — Lenovo Online Research & Equipment"
authors = ["LORE Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[lib]
name = "lore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lore"
path = "src/main.rs"
